[gd_scene load_steps=11 format=2]

[ext_resource path="res://things/machine_ui/Righteous-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://things/machine_ui/Bungee-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://things/dialog_ui/DialogUI.gd" type="Script" id=3]
[ext_resource path="res://things/dialog_ui/click.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.427451, 0.32549, 0.0941176, 1 )
border_width_bottom = 6
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.243137, 0.243137, 0.243137, 0.6 )
shadow_size = 9
shadow_offset = Vector2( 0, 5 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.121569, 0.109804, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.317647, 0.317647, 0.317647, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 0, 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 4 )

[node name="DialogUI" type="CanvasLayer"]
script = ExtResource( 3 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.

Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
title = "Stone Boi"

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 212.0
margin_top = 297.0
margin_right = 812.0
margin_bottom = 303.0
rect_min_size = Vector2( 600, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_right = 600.0
margin_bottom = 154.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 134.0
mouse_filter = 2
custom_constants/separation = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 560.0
margin_bottom = 114.0
mouse_filter = 2
custom_constants/separation = 19

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 560.0
margin_bottom = 33.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="MachineName" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PanelContainer"]
margin_top = 4.0
margin_right = 560.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
text = "Stone Hans"
align = 1

[node name="Text" type="RichTextLabel" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 560.0
margin_bottom = 77.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
tab_size = 15
fit_content_height = true

[node name="Label2" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 560.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.729412, 0.658824, 0.52549, 1 )
text = "Click to continue"
align = 1

[node name="Tween" type="Tween" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = SubResource( 6 )
volume_db = -4.216

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Sound"

[connection signal="gui_input" from="CenterContainer" to="." method="_on_CenterContainer_gui_input"]
